Get task skeleton plugin back into working order