@@ -16,21 +16,22 @@
 
 package cd.go.contrib.task.skeleton;
 
-import org.apache.commons.io.IOUtils;
-
 import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.util.Objects;
 
 public class Util {
 
     public static String readResource(String resourceFile) {
-        try (InputStreamReader reader = new InputStreamReader(Util.class.getResourceAsStream(resourceFile), StandardCharsets.UTF_8)) {
-            return IOUtils.toString(reader);
+        return new String(readResourceBytes(resourceFile), StandardCharsets.UTF_8);
+    }
+
+    public static byte[] readResourceBytes(String resourceFile) {
+        try (InputStream in = Objects.requireNonNull(Util.class.getResourceAsStream(resourceFile))) {
+            return in.readAllBytes();
         } catch (IOException e) {
             throw new RuntimeException("Could not find resource " + resourceFile, e);
         }
     }
-
-
 }
